[package]
name = "fusion-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3", features = [] }
serde = { version = "1.0.195", feature = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
zerocopy = "0.7.32"
