[package]
name = "fusion-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3", features = [] }
serde = { version = "1.0.195", default-features = false, features = ["derive", "alloc"]}
tokio = { version = "1.35.1", features = ["full"] }
zerocopy = "0.7.32"
async-trait = { version = "0.1.77", features = [] }
hashbrown = { version = "0.14.3" , features = ["serde"]}
tokio-condvar = "0.1.0"

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]
